
Version (CVS)
-------------

XML: Fixed bug with 'equals' implementation not being generated for classes representing <xsd:complexType>'s
	(andrew.fawcett@coda.com, Andrew Fawcett)

XML: Fixed bug in 'equals' implementation, not calling super.equals(...) when approprite
	(andrew.fawcett@coda.com, Andrew Fawcett)

XML: Fixed problem in Schema unmarshalling (when using both xsd:include and xsd:import), 
            allowing a given schema to be  parsed a second time, resulting in duplicate type errors.
	(andrew.fawcett@coda.com, Andrew Fawcett)

XML: Added an option (default is off) to expose the names of each attribute and element described in the class descriptor.
            Use org.exolab.castor.builder.classdescfieldnames=true in castorbuilder.properties to enable
	(andrew.fawcett@coda.com, Andrew Fawcett)

XML:  Fix a bug in SimpleTypeFactory.
      (Reported by Risheng Lin <rlin@eng.utoledo.edu>) (Arnaud)

XML:  Add an option in the Source Generator that allows to use wrapper objects instead of primitives
      (Eg java.lang.Double instead of double) (Arnaud)

XML:  Fix a bug when handling attibutes in the UnMarshallerHandler (bug reported and 
      patch submitted by Marcin Chalotowski <Marcin.Chalotowski@3dart.com>) (Arnaud)


Version 0.9.3 July 3, 2001
--------------------------

XML:    Added fix to CollectionInfoJ2 for unbounded collections. (kvisco)
           - reported by Julien Viet

XML:    Added nested Exception support for SimpleTypesFactory (kvisco)

XML:    Added nested Exception support for FieldHandlerImpl (kvisco)

XML:    Fixed CollectionInfoODMG30,  applied patch by Bernd Deichmann (kvisco)

XML:    Added the auto-complete feature and transient field support to 
        the mapping file. (Sebastien Gignoux <gignoux@intalio.com>)

XML:    Fix a bug that creates infinite loop when cross-importing 
        (or including) schemas(Arnaud).

XML:    Added the support for the facets min/max Ex/Inclusive for the date/time 