@@ -114,6 +114,14 @@ public class CollectionInfoJ2 extends CollectionInfo {
         method.addParameter(contentParam);
         createAddMethod(method);
 
+        //-- add{Name}(int index, Object)
+        method = new JMethod(null, "add"+cName);
+        jClass.addMethod(method);
+        method.addException(SGTypes.IndexOutOfBoundsException);
+		method.addParameter(new JParameter(JType.Int, "index"));
+        method.addParameter(contentParam);
+        createAddInsertMethod(method);
+
         //-- {type} get{Name}(int index)
         method = new JMethod(jType, "get"+cName);
         jClass.addMethod(method);
@@ -218,6 +226,38 @@ public class CollectionInfoJ2 extends CollectionInfo {
 
     } //-- createAddMethod
 
+    /**
+     * Creates implementation of add method with index.
+     *
+     * @param method the JMethod in which to create the source
+     * code.
+    **/
+    public void createAddInsertMethod(JMethod method) {
+
+        JSourceCode jsc = method.getSourceCode();
+
+        int maxSize = getXSList().getMaximumSize();
+        if (maxSize > 0) {
+            jsc.add("if (!(");
+            jsc.append(getName());
+            jsc.append(".size() < ");
+            jsc.append(Integer.toString(maxSize));
+            jsc.append(")) {");
+            jsc.indent();
+            jsc.add("throw new IndexOutOfBoundsException();");
+            jsc.unindent();
+            jsc.add("}");
+        }
+        jsc.add(getName());
+        jsc.append(".add(index, ");
+        jsc.append(getContentType().createToJavaObjectCode(getContentName()));
+        jsc.append(");");
+
+        //-- bound properties
+        if (isBound())
+            createBoundPropertyCode(jsc);
+
+    } //-- createAddMethod
 
     /**
      * Creates implementation of Enumerate method.
